# apify-file-unpacker

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.actor/: INPUT_SCHEMA.json  OUTPUT_SCHEMA.json  actor.json
src/: main.py  settings.py
