[project]
name = "file-unpacker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify[scrapy] >= 3.0.0",
    "pydantic-settings>=2.6.1",
    "scrapy < 3.0.0",
    "py7zr>=0.22.0",
]

[dependency-groups]
dev = [
    "mypy~=1.16.0",
    "ruff~=0.12.0",
]

[tool.ruff]
line-length = 120
include = ["src/**/*.py"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Unused imports
]
"**/__main__.py" = [
    "E402", # Module level import not at top of file
]

[tool.mypy]
files = ["src"]

[[tool.mypy.overrides]]
module = [
    'scrapy.*',
]
ignore_missing_imports = true
